# weather-app

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  release.yml  security.yml
docker/: Dockerfile.dev  Dockerfile.prod
tests/: test_service.py
weather/: api.py  cli.py  service.py
