[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "build"            
]
build-backend = "setuptools.build_meta"

[project]
name = "weather-cli"
version = "0.1.0"
description = "A small CLI to fetch weather data using the OpenWeatherMap API"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "Luka Mijatovic", email = "luka.mijatovic@fielmann.com" }
]
requires-python = ">=3.9"


dependencies = [
  "requests>=2.28"
]

# convenient metadata
keywords = ["weather", "cli", "openweathermap"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent"
]

[project.urls]
"Repository" = "https://github.com/lukamijat/weather-cli"
"Bug Tracker" = "https://github.com/lukamijat/weather-cli/issues"


[project.scripts]
weather = "weather.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "requests-mock>=1.9",
  "pytest-cov",
  "flake8",
  "black",
  "isort",
  "pre-commit",
  "twine",
  "build"
]

# setuptools package discovery 
[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
